tests/snapshots/render_snapshots__result_history__focus_mode_history_mode.snap
---
source: tests/render_snapshots.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [3] Result [QUERY ◀ 1/3 ▶] (1 row, 5ms) ─────────────────────────────────────┐
│count                                                                         │
│42                                                                            │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│◀ 1/3  SELECT 1                                                               │
└──────────────────────────────────────────────────────────────────────────────┘
]/[:History  ?:Help  Esc:Back  q:Quit
