tests/snapshots/render_snapshots__result_history__result_query_with_history_hint.snap
---
source: tests/render_snapshots.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│> public.users    │┌ [2] Inspector ───────────────────────────────────────────┐
│  public.posts    ││(select a table)                                          │
│  public.comments ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  │└──────────────────────────────────────────────────────────┘
│                  │┌ [3] Result Query (1 row, 5ms) (history: ^H) ─────────────┐
│                  ││count                                                     │
│                  ││42                                                        │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
r:Reload  s:SQL  e:ER Diagram  ^P:Tables  ^R:Read-Only  f:Focus  ^E:Export  Ente
